// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cancel nav 1`] = `
<DocumentFragment>
  <h1>
    custom route
  </h1>
</DocumentFragment>
`;

exports[`custom route 1`] = `
<DocumentFragment>
  <h1>
    custom route
  </h1>
</DocumentFragment>
`;

exports[`routes with components/children/paths/no paths 1`] = `
<DocumentFragment>
  <h1>
    hello
  </h1>
</DocumentFragment>
`;
